test4 fix bug gh page

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge" /> -->
-    <meta http-equiv="Content-Type" content="text/html" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo List</title>
-    <link content="text/css" rel="stylesheet" href="style.css" />
+    <link content-type="text/css" rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main>
@@ -20,6 +19,10 @@
       <section class="paddingTop taskListSection"></section>
     </main>
 
-    <script type="module" src="./javascript/index.js"></script>
+    <script
+      content-type="application/javascript"
+      type="module"
+      src="./javascript/index.js"
+    ></script>
   </body>
 </html>
