test fix bug ghpage : abandon (retour a version originel)

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo List</title>
-    <link content-type="text/css" rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main>
@@ -19,10 +19,6 @@
       <section class="paddingTop taskListSection"></section>
     </main>
 
-    <script
-      content-type="application/javascript"
-      type="module"
-      src="./javascript/index.js"
-    ></script>
+    <script type="module" src="./javascript/index.js"></script>
   </body>
 </html>
